--- a/_sass/colours.scss
+++ b/_sass/colours.scss
@@ -25,23 +25,124 @@ $orange-0: #fff4e6;
 
 $red-9: #c92a2a;
 $red-8: #e03131;
+$red-7: #f03e3e;
+$red-6: #fa5252;
+$red-5: #ff6b6b;
+$red-4: #ff8787;
 $red-3: #ffa8a8;
+$red-2: #ffc9c9;
 $red-1: #ffe3e3;
+$red-0: #fff5f5;
+
+$yellow-9: #e67700;
+$yellow-8: #f08c00;
+$yellow-7: #f59f00;
+$yellow-6: #fab005;
+$yellow-5: #fcc419;
+$yellow-4: #ffd43b;
+$yellow-3: #ffe066;
+$yellow-2: #ffec99;
+$yellow-1: #fff3bf;
+$yellow-0: #fff9db;
+
+$pink-9: #a61e4d;
+$pink-8: #c2255c;
+$pink-7: #d6336c;
+$pink-6: #e64980;
+$pink-5: #f06595;
+$pink-4: #f783ac;
+$pink-3: #faa2c1;
+$pink-2: #fcc2d7;
+$pink-1: #ffdeeb;
+$pink-0: #fff0f6;
+
+$grape-9: #862e9c;
+$grape-8: #9c36b5;
+$grape-7: #ae3ec9;
+$grape-6: #be4bdb;
+$grape-5: #cc5de8;
+$grape-4: #da77f2;
+$grape-3: #e599f7;
+$grape-2: #eebefa;
+$grape-1: #f3d9fa;
+$grape-0: #f8f0fc;
 
 $teal-9: #087f5b;
 $teal-8: #099268;
+$teal-7: #0ca678;
+$teal-6: #12b886;
+$teal-5: #20c997;
+$teal-4: #38d9a9;
 $teal-3: #63e6be;
+$teal-2: #96f2d7;
 $teal-1: #c3fae8;
+$teal-0: #e6fcf5;
+
+$cyan-9: #0b7285;
+$cyan-8: #0c8599;
+$cyan-7: #1098ad;
+$cyan-6: #15aabf;
+$cyan-5: #22b8cf;
+$cyan-4: #3bc9db;
+$cyan-3: #66d9e8;
+$cyan-2: #99e9f2;
+$cyan-1: #c5f6fa;
+$cyan-0: #e3fafc;
 
 $blue-9: #1862ab;
 $blue-8: #1b6ec2;
+$blue-7: #1c7cd6;
+$blue-6: #228ae6;
+$blue-5: #329af0;
+$blue-4: #4dadf7;
 $blue-3: #72c3fc;
+$blue-2: #a3daff;
 $blue-1: #ccedff;
+$blue-0: #e8f7ff;
 
 $violet-9: #5f3dc4;
 $violet-8: #6741d9;
+$violet-7: #7048e8;
+$violet-6: #7950f2;
+$violet-5: #845ef7;
+$violet-4: #9775fa;
 $violet-3: #b197fc;
+$violet-2: #d0bfff;
 $violet-1: #e5dbff;
+$violet-0: #f3f0ff;
+
+$indigo-9: #364fc7;
+$indigo-8: #3b5bdb;
+$indigo-7: #4263eb;
+$indigo-6: #4c6ef5;
+$indigo-5: #5c7cfa;
+$indigo-4: #748ffc;
+$indigo-3: #91a7ff;
+$indigo-2: #bac8ff;
+$indigo-1: #dbe4ff;
+$indigo-0: #edf2ff;
+
+$lime-9: #5c940d;
+$lime-8: #66a80f;
+$lime-7: #74b816;
+$lime-6: #82c91e;
+$lime-5: #94d82d;
+$lime-4: #a9e34b;
+$lime-3: #c0eb75;
+$lime-2: #d8f5a2;
+$lime-1: #e9fac8;
+$lime-0: #f4fce3;
+
+$green-9: #2b8a3e;
+$green-8: #2f9e44;
+$green-7: #37b24d;
+$green-6: #40c057;
+$green-5: #51cf66;
+$green-4: #69db7c;
+$green-3: #8ce99a;
+$green-2: #b2f2bb;
+$green-1: #d3f9d8;
+$green-0: #ebfbee;
 
 :root {
     --background-color: #{$white};
