--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -4,6 +4,61 @@
 @use "colours";
 @use "navbar";
 
+*, *:before, *:after {
+    box-sizing: border-box;
+}
+
+html {
+    height: 100%;
+}
+
+body {
+    background: var(--background-color);
+    color: var(--default-color);
+    font-family: BlinkMacSystemFont, -apple-system, “Segoe UI”, Roboto, Helvetica, Arial, sans-serif;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+main {
+    --margin-width: 5vw;
+    margin-left: var(--margin-width);
+    margin-right: var(--margin-width);
+    max-width: 1000px;
+
+    @media (min-width: 600px) {
+        // --margin-width: $std-space / 2;
+        --margin-width: .5rem;
+    }
+
+    @media (min-width: 800px) {
+        // --margin-width: $std-space;
+        --margin-width: 1rem;
+    }
+
+    @media (min-width: 1032px) {
+        --margin-width: auto;
+    }
+}
+
+h1 {
+    font-size: 3rem;
+}
+
+a {
+    color: inherit;
+
+    &:hover, &:focus {
+        text-decoration: underline;
+        outline: none;
+    }
+
+    &.external {
+        color: var(--link-color);
+    }
+}
+
 @each $category in $data-categories-with-ordering {
     .#{$category} { color: var(--#{$category}-color); }
     .#{$category}.with-bg { background-color: var(--#{$category}-background-color); }
