--- a/_layouts/author.html
+++ b/_layouts/author.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<h1>Books by {{ page.author_name }}</h1>
+<h1>Books by {{ page.title }}</h1>
 
 <ul>
   {% for book in page.authored_books %}
