--- a/_layouts/book.html
+++ b/_layouts/book.html
@@ -1,5 +1,66 @@
 ---
 layout: default
+permalink: /books/:title
 ---
 <h1>{{ page.title }}</h1>
-{{ page.author_names }}
+<ul>
+	<li>
+		Series: {{ site.data.series_names[page.series] }}
+	</li>
+	{% if page.volume_part %}
+		<li>
+			<span>Volume: {{ page.volume }}/{{ page.volume_part }}</span>
+		</li>
+	{% else %}
+		<li>Volume: {{ page.volume }}</li>
+	{% endif %}
+	{% if page.author_names.size > 0 %}
+	<li class="author-list">
+		{% if page.author_names.size > 1 %}Authors{% else %}Author{% endif %}:
+		{% for author in page.author_names %}
+			<a class="authors" href="{{ author | slugify | prepend: '/authors/' | relative_url }}">
+				{{ author }}
+			</a>
+			{% unless forloop.last %};{% endunless %}
+		{% endfor %}
+	</li>
+	{% endif %}
+	{% if page.editor_names.size > 0 %}
+	<li class="author-list">
+		{% if page.editor_names.size > 1 %}Editors{% else %}Editor{% endif %}:
+		{% for author in page.editor_names %}
+			<a class="authors" href="{{ author | slugify | prepend: '/authors/' | relative_url }}">
+				{{ author }}
+			</a>
+			{% unless forloop.last %};{% endunless %}
+		{% endfor %}
+	</li>
+	{% endif %}
+	<li>Price: &euro;{{ page.price }}</li>
+	{% if page.isbn10 %}
+		<li>ISBN-13: {{ page.isbn13 }}</li>
+		<li>ISBN-10: {{ page.isbn10 }}</li>
+	{% else %}
+		<li>ISBN: {{ page.isbn13 }}</li>
+	{% endif %}
+	{% if page.pages %}
+		<li>Pages: {{ page.pages }}&nbsp;pp.{% if page.plates %} plus {{ page.plates }} plates{% endif %}</li>
+	{% endif %}
+	{% if page.size %}
+		<li>Size: {{ page.size }}&nbsp;cm</li>
+	{% endif %}
+</ul>
+
+<h2>Bibliographic Reference</h2>
+
+{{ page | chicago_citation: site }}
+
+{% if page.content != '' %}
+	<h2>Description</h2>
+	{{ page.content }}
+{% endif %}
+
+{% if page.corrigenda %}
+	<h2>Corrigenda</h2>
+	<p>{{ page.corrigenda }}</p>
+{% endif %}
