Removed News Link

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -16,7 +16,7 @@
 					<li class="authors with-bg"><a href="{{ '/authors' | relative_url }}"><span>Authors</span></a></li>
 					<li class="series with-bg"><a href="{{ '/series' | relative_url }}"><span>Series</span></a></li>
 					<li class="titles with-bg"><a href="{{ '/titles' | relative_url }}"><span>Titles</span></a></li>
-					<li class="news with-bg"><a href="{{ '/news' | relative_url }}"><span>News</span></a></li>
+					<!--<li class="news with-bg"><a href="{{ '/news' | relative_url }}"><span>News</span></a></li>-->
 				</ul>
 			</nav>
 			<a class="imm-title small" href="{{ '/' | relative_url }}">
