--- a/_layouts/series.html
+++ b/_layouts/series.html
@@ -4,46 +4,48 @@ layout: default
 {% assign current_series = page.series %}
 {% assign book_pages = site.pages | where_exp: "page", "page.layout == 'book' and page.series == current_series" | sort_by_volume %}
 {% if site.data.series_alt_names[page.series] %}
-<h2>
-	{% for name in site.data.series_alt_names[page.series] %}
-		<div>{{name}}</div>
-	{% endfor %}
-</h2>
-{% endif %}
-{% if book_pages.size > 0 %}
-  <input type="search" oninput="debounceSearch(event)" placeholder="Search for a book..." />
-  <ul class="book-list">
-  {% for page in book_pages %}
-    <li data-url="{{ page.url | relative_url }}">
-	  <a href="{{ page.url | relative_url }}">
-		{{page.volume}}{% if page.volume_part %}/{{page.volume_part}}{% endif %}: {{page.title}}
-	  </a>
-    </li>
-  {% endfor %}
-  </ul>
-  <div id="no-results" style="display: none;">
-	<h3>No Results</h3>
-  </div>
-{% else %}
-No Books Found
-{% endif %}
-<script type="text/javascript">
-  // Pass the book data to JS for searching
-  const books = [
-    {% for page in book_pages %}
-      {% if page.title and page.url %}
-        {
-          "title": "{{ page.title }}",
-          "url": "{{ page.url | relative_url }}",
-          "year": "{{ page.year }}",
-		  "author_names": {{ page.author_names | jsonify }},
-		  "editor_names": {{ page.author_names | jsonify }},
-		  "isbn13": "{{ page.isbn13 }}",
-		  "isbn10": "{{ page.isbn10 }}",
-		  "volume": "{{ page.volume }}{% if page.volume_part %}/{{page.volume_part}}{% endif %}"
-        }{% unless forloop.last %},{% endunless %}
-      {% endif %}
-    {% endfor %}
-  ];
-</script>
-<script src="{{ '/assets/js/series_search.js' | relative_url }}"></script>
+<div class="series-page">
+	<h2>
+		{% for name in site.data.series_alt_names[page.series] %}
+			<div class="series-subtitle">{{name}}</div>
+		{% endfor %}
+	</h2>
+	{% endif %}
+	{% if book_pages.size > 0 %}
+	  <input type="search" oninput="debounceSearch(event)" placeholder="Search for a book..." />
+	  <ul class="book-list">
+	  {% for page in book_pages %}
+		<li data-url="{{ page.url | relative_url }}">
+		  <a href="{{ page.url | relative_url }}">
+			{{page.volume}}{% if page.volume_part %}/{{page.volume_part}}{% endif %}: {{page.title}}
+		  </a>
+		</li>
+	  {% endfor %}
+	  </ul>
+	  <div id="no-results" style="display: none;">
+		<h3>No Results</h3>
+	  </div>
+	{% else %}
+	No Books Found
+	{% endif %}
+	<script type="text/javascript">
+	  // Pass the book data to JS for searching
+	  const books = [
+		{% for page in book_pages %}
+		  {% if page.title and page.url %}
+			{
+			  "title": "{{ page.title }}",
+			  "url": "{{ page.url | relative_url }}",
+			  "year": "{{ page.year }}",
+			  "author_names": {{ page.author_names | jsonify }},
+			  "editor_names": {{ page.author_names | jsonify }},
+			  "isbn13": "{{ page.isbn13 }}",
+			  "isbn10": "{{ page.isbn10 }}",
+			  "volume": "{{ page.volume }}{% if page.volume_part %}/{{page.volume_part}}{% endif %}"
+			}{% unless forloop.last %},{% endunless %}
+		  {% endif %}
+		{% endfor %}
+	  ];
+	</script>
+	<script src="{{ '/assets/js/series_search.js' | relative_url }}"></script>
+</div>
