--- a/_sass/authors.scss
+++ b/_sass/authors.scss
@@ -1,7 +1,9 @@
-.author-list {
-	list-style-type: '\2192';
-	
-	li a {
-		margin-left: 5px;
+.authors-page {
+	.author-list {
+		list-style-type: '\2192';
+		
+		li a {
+			margin-left: 5px;
+		}
 	}
 }
