--- a/_sass/colours.scss
+++ b/_sass/colours.scss
@@ -154,23 +154,23 @@ $green-0: #ebfbee;
     --ordering-color: #{$red-8};
     --series-color: #{$teal-8};
     --titles-color: #{$blue-8};
-    --news-color: #{$violet-8};
+    --online-color: #{$violet-8};
 
     --authors-color-focus: #{$orange-9};
 	--ordering-color-focus: #{$red-9};
     --series-color-focus: #{$teal-9};
     --titles-color-focus: #{$blue-9};
-    --news-color-focus: #{$violet-9};
+    --online-color-focus: #{$violet-9};
 
     --authors-background-color: #{$orange-1};
     --ordering-background-color: #{$red-1};
     --series-background-color: #{$teal-1};
     --titles-background-color: #{$blue-1};
-    --news-background-color: #{$violet-1};
+    --online-background-color: #{$violet-1};
 
     --authors-border-color: #{$orange-3};
     --ordering-border-color: #{$red-3};
     --series-border-color: #{$teal-3};
     --titles-border-color: #{blue-3};
-    --news-border-color: #{$violet-3};
+    --online-border-color: #{$violet-3};
 }
