--- a/_sass/navbar.scss
+++ b/_sass/navbar.scss
@@ -22,10 +22,9 @@ $short-title-in-navbar-width: 62.5rem;  // 1000px
         a {
             align-items: center;
             display: flex;
-            height: $navbar-height;
+            height: 100%;
             justify-content: center;
             padding: $std-space;
-            width: $navbar-item-width;
         }
     }
 
@@ -42,7 +41,7 @@ $short-title-in-navbar-width: 62.5rem;  // 1000px
         list-style: none;
         flex-grow: 0;
         height: $navbar-height;
-        width: $navbar-item-width;
+        min-width: $navbar-item-width;
     }
 
     li + li {
