--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -6,17 +6,18 @@
 		{% else %}
 			<title>{{ page.title | default: page.name }} | Institute of Mediaeval Music</title>
 		{% endif %}
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="{{ '/assets/css/styles.css' | relative_url }}" />
 	</head>
 	<body>
 		<header id="site-header">
 			<nav aria-label="Main navigation">
 				<ul>
-					<li class="ordering with-bg"><a href="{{ '/ordering' | relative_url }}"><span>Ordering</span></a></li>
-					<li class="authors with-bg"><a href="{{ '/authors' | relative_url }}"><span>Authors</span></a></li>
-					<li class="series with-bg"><a href="{{ '/series' | relative_url }}"><span>Series</span></a></li>
-					<li class="titles with-bg"><a href="{{ '/titles' | relative_url }}"><span>Titles</span></a></li>
-					<li class="online with-bg"><a href="{{ '/online' | relative_url }}"><span>Open Access</span></a></li>
+					<li class="ordering"><a href="{{ '/ordering' | relative_url }}"><span>Ordering</span></a></li>
+					<li class="authors"><a href="{{ '/authors' | relative_url }}"><span>Authors</span></a></li>
+					<li class="series"><a href="{{ '/series' | relative_url }}"><span>Series</span></a></li>
+					<li class="titles"><a href="{{ '/titles' | relative_url }}"><span>Titles</span></a></li>
+					<li class="online"><a href="{{ '/online' | relative_url }}"><span>Open Access</span></a></li>
 				</ul>
 			</nav>
 			<a class="imm-title small" href="{{ '/' | relative_url }}">
