--- a/_sass/homepage.scss
+++ b/_sass/homepage.scss
@@ -1,3 +1,14 @@
+@use "mixins" as *;
+
 .home-page {
 	display: flex;
+	
+	@include down(tablet) {
+		flex-direction: column-reverse;
+		
+		img {
+			display: block;
+			width: 50%;
+		}
+	}
 }
