--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -1,7 +1,6 @@
 ---
 ---
-@use "variables" as *;
-@use "colours";
+@use "settings" as *;
 @use "navbar";
 @use "quick-links";
 @use "homepage";
@@ -13,37 +12,20 @@
 }
 
 html {
-    height: 100%;
+	height: 100%
 }
 
 body {
-    background: var(--background-color);
-    color: var(--default-color);
     font-family: BlinkMacSystemFont, -apple-system, “Segoe UI”, Roboto, Helvetica, Arial, sans-serif;
-    height: 100%;
-    margin: 0;
-    padding: 0;
+	height: 100%;
+	margin: 0;
+	padding: 0;
 }
 
 main {
-    --margin-width: 5vw;
-    margin-left: var(--margin-width);
-    margin-right: var(--margin-width);
-    max-width: 1000px;
-
-    @media (min-width: 600px) {
-        // --margin-width: $std-space / 2;
-        --margin-width: .5rem;
-    }
-
-    @media (min-width: 800px) {
-        // --margin-width: $std-space;
-        --margin-width: 1rem;
-    }
-
-    @media (min-width: 1032px) {
-        --margin-width: auto;
-    }
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 1000px
 }
 
 h1 {
@@ -59,13 +41,8 @@ a {
     }
 
     &.external {
-        color: var(--link-color);
+        color: $link-colour;
     }
-}
-
-@each $category in $data-categories-with-ordering {
-    .#{$category} { color: var(--#{$category}-color); }
-    .#{$category}.with-bg { background-color: var(--#{$category}-background-color); }
 }
 
 .book-list {
