--- a/_layouts/series.html
+++ b/_layouts/series.html
@@ -12,7 +12,7 @@ layout: default
 	</h2>
 	{% endif %}
 	{% if book_pages.size > 0 %}
-	  <input type="search" oninput="debounceSearch(event)" placeholder="Search for a book..." />
+	  <input id="book-search" type="search" oninput="debounceSearch(event)" placeholder="Search for a book..." />
 	  <ul class="book-list">
 	  {% for page in book_pages %}
 		<li data-url="{{ page.url | relative_url }}">
