--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -2,12 +2,16 @@
 <html>
 	<head>
 		{% if page.url == "/" %}
-			<title>Institute of Mediaeval Music</title>
+			<title>The Institute of Mediaeval Music</title>
 		{% else %}
-			<title>{{ page.title | default: page.name }} | Institute of Mediaeval Music</title>
+			<title>{{ page.title | default: page.name }} | The Institute of Mediaeval Music</title>
 		{% endif %}
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="{{ '/assets/css/styles.css' | relative_url }}" />
+		<link rel="icon" href="{{ '/favicon.ico' | relative_url }}" sizes="32x32">
+		<link rel="icon" href="{{ '/assets/img/favicon.svg' | relative_url }}" type="image/svg+xml">
+		<link rel="apple-touch-icon" href="{{ '/apple-touch-icon.png' | relative_url }}" sizes="180x180">
+		<link rel="manifest" href="{{ '/manifest.json' | relative_url }}" />
 	</head>
 	<body>
 		<header id="site-header">
