--- a/_sass/navbar.scss
+++ b/_sass/navbar.scss
@@ -2,19 +2,19 @@
 @use "mixins" as *;
 @use "colours";
 
-#site-header {
-    $navbar-height: 75px;
-    $navbar-item-width: 100px;
+$navbar-height: 75px;
+$navbar-item-width: 100px;
 
+#site-header {
     align-items: center;
     background-color: colours.$gray-2;
     display: flex;
-    height: $navbar-height;
+    min-height: $navbar-height;
     justify-content: space-between;
     margin-bottom: $std-space;
     padding: 0 5vw;
 
-    nav {
+    .main-nav {
         height: $navbar-height;
 
         a {
@@ -24,27 +24,57 @@
             justify-content: center;
             padding: $std-space;
         }
-    }
+		
+		ul {
+			height: $navbar-height;
+			margin: 0;
+			padding: 0;
 
-    ul {
-        height: $navbar-height;
-        margin: 0;
-        padding: 0;
+			display: flex;
+			align-items: stretch;
+			list-style-type: none;
+		}
 
-        display: flex;
-        align-items: stretch;
-        list-style-type: none;
-    }
+		li {
+			flex-grow: 0;
+			height: $navbar-height;
+			min-width: $navbar-item-width;
+		}
 
-    li {
-        flex-grow: 0;
-        height: $navbar-height;
-        min-width: $navbar-item-width;
+		li + li {
+			margin-left: 24px;
+		}
     }
-
-    li + li {
-        margin-left: 24px;
-    }
+	
+	.burger-menu {
+		display: none;
+		width: 100%;
+		ul {
+			list-style-type: none;
+			padding: 0px;
+			
+			li {
+				text-align: center;
+				padding: 5px;
+				margin-bottom: 10px;
+			}
+		}
+		
+		&.open {
+			display: block;
+		}
+	}
+	
+	.logo-container {
+		margin-left: 24px;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+	}
+	
+	.icon {
+		display: none;
+	}
     
     .authors {
         color: colours.$orange-8;
@@ -112,81 +142,22 @@
     }
 
     @include down(tablet) {
-        nav {
-            a {
-                width: 15vw;
-            }
-        }
-        
-        li {
-            width: 15vw;
-        }
-        
-        li + li {
-            margin-left: 2vw;
-        }
+		flex-direction: column;
+        .logo-container {
+			width: 100%;
+			margin-left: unset;
+		}
+		.icon {
+			display: inline-block;
+		}
+		
+		.main-nav {
+			display: none;
+		}
     }
-
-    @include down(mobile) {
-        padding: 0;
-        nav {
-            width: 100%;
-            a {
-                width: 100%;
-            }
-        }
-        ul {
-            flex-grow: 1;
-        }
-        li {
-            flex-grow: 1;
-            flex-shrink: 1;
-        }
-    }
-
-    .imm-title {
-        font-size: 3rem;
-        // ".large" title says "Institute of Mediaeval Music" while ".small" says "IMM"
-        &.large {
-            display: block;
-        }
-        &.small {
-            display: none;
-        }
-
-        // Switch between showing the "large" title, the "small" title, and hiding the title.
-        @include down(tablet) {
-            &.large {
-                display: none;
-            }
-        }
-        @include between(mobile, tablet) {
-            &.small {
-                display: block;
-            }
-        }
-
-        // Adjust font-size according to the screen width.
-        @media (min-width: 1300px) and (max-width: 1350px) {
-            font-size: 2.75rem;
-        }
-        @media (min-width: 1250px) and (max-width: 1300px) {
-            font-size: 2.5rem;
-        }
-        @media (min-width: 1200px) and (max-width: 1250px) {
-            font-size: 2.25rem;
-        }
-        @media (min-width: 1150px) and (max-width: 1200px) {
-            font-size: 2rem;
-        }
-        @media (min-width: 1100px) and (max-width: 1150px) {
-            font-size: 1.75rem;
-        }
-        @media (min-width: 1050px) and (max-width: 1100px) {
-            font-size: 1.5rem;
-        }
-        @media (min-width: calc($tablet-breakpoint + 1px)) and (max-width: 1050px) {
-            font-size: 1.25rem;
-        }
-    }
+	
+	.logo {
+		display: block;
+		height: $navbar-height;
+	}
 }
