Fixed resize style issue

--- a/_sass/navbar.scss
+++ b/_sass/navbar.scss
@@ -60,8 +60,10 @@ $navbar-item-width: 100px;
 			}
 		}
 		
-		&.open {
-			display: block;
+		@include down(tablet) {
+			&.open {
+				display: block;
+			}
 		}
 	}
 	
